# hahaton

./: .gitignore  .gitmodules
ann/: CMakeLists.txt  example.docx  main.cpp
katy/: main.cpp
katy/back/: server.cpp
katy/back/serverStart/: serverStart.sln
katy/back/serverStart/serverStart/: CMakeLists.txt  formatter.cpp  formatter.h  serverStart.cpp  serverStart.vcxproj  serverStart.vcxproj.filters
katy/back/serverStart/serverStart/Debug/: serverStart.exe.recipe  vc143.idb
katy/back/serverStart/serverStart/Debug/serverStart.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  serverStart.lastbuildstate
katy/back/serverStart/serverStart/front/: index.html
katy/back/serverStart/serverStart/front/css/: style.css
katy/back/serverStart/serverStart/x64/Debug/: serverStart.exe.recipe  vc143.idb
katy/back/serverStart/serverStart/x64/Debug/serverStart.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  serverStart.lastbuildstate
katy/front/css/: style.css
katy/front/js/: fileUpload.js  literature.js  titlePageForm.js
katy/frontCHERNOVIK/: index.html
katy/public/: index.html
katy/public/css/: style.css
prezent/: Документация_tripleCharm (1).docx  Документация_tripleCharm.docx
